--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 <title>L-System Generator</title>
+	<meta charset="UTF-8">
+	<link rel='stylesheet' href='main.css' />
+	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.min.js">
+	</script>
+	<script language="javascript" type="text/javascript" src="system.js"></script>
 </head>
 <body>
-Hello World
+Hello World Pizza
 </body>
 </htlm>
