--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<link rel='stylesheet' href='main.css' />
 	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.min.js">
 	</script>
+	<script language="javascript" type="text/javascript" src="libs/dat.gui.min.js"></script>
 	<script language="javascript" type="text/javascript" src="system.js"></script>
+	<script language="javascript" type="text/javascript" src="ui.js"></script>
 </head>
 <body>
-Hello World Pizza
 </body>
 </htlm>
